--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -11,6 +11,10 @@ body {
   }
 }
 
+a {
+  text-decoration: none;
+}
+
 .overall {
   height: 100%;
   display: flex;
@@ -255,13 +259,14 @@ p {
 
   .dropdown {
     border: 1px solid #ddd;
-    padding: 0px 24px;
+    padding: 0px 20px;
     border-radius: 3px;
     box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.05);
     background-color: #eee;
     position: absolute;
     top: 26px;
     left: 0;
+    white-space: nowrap;
 
     $padding: 10px;
 
@@ -272,8 +277,7 @@ p {
       margin: 0;
 
       span {
-        margin: 10px 0;
-        margin-left: 18px;
+        margin: 12px 0;
         line-height: 1;
       }
 
@@ -286,6 +290,7 @@ p {
     > ul {
       list-style: none;
       padding: 0 0px;
+      margin: 12px 0;
     }
   }
 }
