Course planner routing

--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Libre+Franklin:400,700');
 @import 'common-app.scss';
+@import 'course-planner.scss';
 
 body {
   color: white;
